# langdock-adk-a2a-agent

./: .gitignore  CHANGES_SUMMARY.md  DEPLOYMENT.md  Dockerfile  ERROR_HANDLING.md  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  a2a_error_handler.py  a2a_rootagent.py  agent_card.json  agent_card_authenticated.json  agent_card_dev.json  agent_engine_app.py  logging_config.py  pyproject.toml  requirements.txt  run_a2a_agent.sh  template.env  test_bearer_auth.py  test_error_handling.py
.cloudbuild/: cloudbuild.yaml
.github/workflows/: ci.yaml  deploy-production.yaml
statista_agent/: agent.py  statista_tools.py
tests/: test_full_workflow.py  test_list_tool_schemas.py  test_statista_example.py
